Rework WebHistory.LocalResultMissingOnServer calculation.

This histogram was made incorrect during the CL
https://chromium-review.googlesource.com/c/chromium/src/+/577968 where
we started holding back pending results in certain circumstances. The
DCHECK would be hit if pending local results were later added to local
results. The counts need to both come from pre or post pending removal,
and only count each URL once.

Additionally, no longer try to count pre-de-duplicated urls.

Bug: 776571
Change-Id: Ic6d700c636dd063efa43e841030ab651931f1a75
Reviewed-on: https://chromium-review.googlesource.com/730569
Reviewed-by: Sylvain Defresne <sdefresne@chromium.org>
Commit-Queue: Sky Malice <skym@chromium.org>
Cr-Commit-Position: refs/heads/master@{#510621}
Former-commit-id: 953da679604151f9d7f9f03aa6ab8429e2479a43